{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 268,
  "lineage": "c184c849-2c18-fb37-4dbc-2c1f071cab76",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dcdce07f6e36586",
            "association_id": "eipassoc-0bf2c13da812c29e3",
            "domain": "vpc",
            "id": "eipalloc-03dcdce07f6e36586",
            "network_border_group": "ap-northeast-3",
            "network_interface": "eni-0e2fc2f381afee331",
            "private_dns": "ip-10-0-0-52.ap-northeast-3.compute.internal",
            "private_ip": "10.0.0.52",
            "public_dns": "ec2-13-208-148-113.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "13.208.148.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2223049202ca738",
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:instance/i-0a0b51a99e86261c5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0b51a99e86261c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-EC2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b50b6f1364effc52",
            "private_dns": "ip-10-0-0-17.ap-northeast-3.compute.internal",
            "private_ip": "10.0.0.17",
            "public_ip": "13.208.209.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093dc5e6d17e0cad4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03309d56d0fdcc706",
            "tags": {
              "Name": "ec2-bastion"
            },
            "tags_all": {
              "Name": "ec2-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-040e3ec8dcf9fa19a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_main_bastion",
            "aws_subnet.main_subnet_bastion",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2223049202ca738",
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:instance/i-049d7d789a95c7850",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049d7d789a95c7850",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "test-EC2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e8b4dc808cf3420d",
            "private_dns": "ip-10-0-0-44.ap-northeast-3.compute.internal",
            "private_ip": "10.0.0.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f501e8b7adb297c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079f12f7353f8aac7",
            "tags": {
              "Name": "ec2-db"
            },
            "tags_all": {
              "Name": "ec2-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c53b811dace4f663"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_main_internal",
            "aws_subnet.main_subnet_bastion",
            "aws_subnet.main_subnet_private",
            "aws_subnet.main_subnet_public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2223049202ca738",
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:instance/i-0744e38573a57b121",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0744e38573a57b121",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-EC2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07f061e8f9bbbd1ad",
            "private_dns": "ip-10-0-0-95.ap-northeast-3.compute.internal",
            "private_ip": "10.0.0.95",
            "public_ip": "13.208.245.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f073cb9de81f155",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d345f68cdc4bea85",
            "tags": {
              "Name": "ec2-web"
            },
            "tags_all": {
              "Name": "ec2-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-010abf9e010c5be36"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_main_external",
            "aws_subnet.main_subnet_bastion",
            "aws_subnet.main_subnet_public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:internet-gateway/igw-07fb5a83192eda2a2",
            "id": "igw-07fb5a83192eda2a2",
            "owner_id": "149580799042",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dcdce07f6e36586",
            "connectivity_type": "public",
            "id": "nat-04c3c8da4e216fa9c",
            "network_interface_id": "eni-0e2fc2f381afee331",
            "private_ip": "10.0.0.52",
            "public_ip": "13.208.148.113",
            "subnet_id": "subnet-079f12f7353f8aac7",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.main",
            "aws_subnet.main_subnet_private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:route-table/rtb-011a5299de4060bf4",
            "id": "rtb-011a5299de4060bf4",
            "owner_id": "149580799042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04c3c8da4e216fa9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-nat"
            },
            "tags_all": {
              "Name": "main-nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.main_subnet_private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:route-table/rtb-047b7646d3fda06c3",
            "id": "rtb-047b7646d3fda06c3",
            "owner_id": "149580799042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fb5a83192eda2a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d16ec8a1fade11a1",
            "route_table_id": "rtb-011a5299de4060bf4",
            "subnet_id": "subnet-079f12f7353f8aac7"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.instance",
            "aws_subnet.main_subnet_private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0293ab1ba41a55b3f",
            "route_table_id": "rtb-047b7646d3fda06c3",
            "subnet_id": "subnet-03309d56d0fdcc706"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main_subnet_bastion",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e509611035f0a7e",
            "route_table_id": "rtb-047b7646d3fda06c3",
            "subnet_id": "subnet-0d345f68cdc4bea85"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main_subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4c9bc84a149c458",
            "route_table_id": "rtb-047b7646d3fda06c3",
            "subnet_id": "subnet-00d95dd75dd09b013"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main_subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:security-group/sg-040e3ec8dcf9fa19a",
            "description": "sg_main_bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040e3ec8dcf9fa19a",
            "ingress": [
              {
                "cidr_blocks": [
                  "58.233.49.43/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_main_bastion",
            "name_prefix": "",
            "owner_id": "149580799042",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:security-group/sg-010abf9e010c5be36",
            "description": "sg_main_external",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010abf9e010c5be36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/27"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_main_external",
            "name_prefix": "",
            "owner_id": "149580799042",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main_subnet_bastion",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:security-group/sg-0c53b811dace4f663",
            "description": "sg_main_internal",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c53b811dace4f663",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/27"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.64/26",
                  "10.0.0.128/26"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_main_internal",
            "name_prefix": "",
            "owner_id": "149580799042",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main_subnet_bastion",
            "aws_subnet.main_subnet_public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:subnet/subnet-03309d56d0fdcc706",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03309d56d0fdcc706",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149580799042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_subnet_bastion"
            },
            "tags_all": {
              "Name": "main_subnet_bastion"
            },
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:subnet/subnet-079f12f7353f8aac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079f12f7353f8aac7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149580799042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_subnet_private"
            },
            "tags_all": {
              "Name": "main_subnet_private"
            },
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:subnet/subnet-0d345f68cdc4bea85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d345f68cdc4bea85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149580799042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_subnet_public_0"
            },
            "tags_all": {
              "Name": "main_subnet_public_0"
            },
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:subnet/subnet-00d95dd75dd09b013",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d95dd75dd09b013",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149580799042",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main_subnet_public_1"
            },
            "tags_all": {
              "Name": "main_subnet_public_1"
            },
            "vpc_id": "vpc-0c54f4c87914dabef"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:149580799042:vpc/vpc-0c54f4c87914dabef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-09c6993091d1b05d4",
            "default_route_table_id": "rtb-00740445fe6679f4f",
            "default_security_group_id": "sg-0aa1cb3d609592a2f",
            "dhcp_options_id": "dopt-0b205ccb08e822933",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c54f4c87914dabef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00740445fe6679f4f",
            "owner_id": "149580799042",
            "tags": {
              "Name": "terraform-101"
            },
            "tags_all": {
              "Name": "terraform-101"
            }
          }
        }
      ]
    }
  ]
}